tests/base/invalid/While_CompileFail_3.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
    i=0
    while i < |args|:
        r = r + |args[i]|
    debug Any.toString(r)
